# k4-project-template

./: CMakeLists.txt  README.md  init.sh
K4TestFWCore/: CMakeLists.txt
K4TestFWCore/options/: eventcounter.py
K4TestFWCore/src/components/: EmptyAlg.cpp  EmptyAlg.h
k4TestFWCore/: CMakeLists.txt
k4TestFWCore/options/: createHelloWorld.py
k4TestFWCore/src/components/: EmptyAlg.h  HelloWorldAlg.cpp  HelloWorldAlg.h
